tests/errors/var_exist_54/e4.src
.IPPcode21

CREATEFRAME
PUSHFRAME
DEFVAR LF@a
CREATEFRAME
PUSHFRAME
STRLEN LF@a string@5698
POPFRAME
